# Testingai-calude

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
cli/: main.py
config/: default.yaml  settings.yaml
core/: __init__.py  config.py  executor.py  ingestor.py  kb_ingest.py  kb_store.py  logger.py  models.py  remediation.py  reporter.py  triage_engine.py
data/: audit.jsonl
data/samples/: pppoe_vlan_mismatch.json
db/: store.py
notifications/: webhook.py
samples/: pppoe_vlan_mismatch.json  pppoe_vlan_mismatch.xml  pppoe_vlan_mismatch.yaml
scripts/: fix_triage_syntax.py  healthcheck.py
services/: chat_service.py
src/nbn_test_tool/: __init__.py  audit.py  config.py  executor.py  llm.py  logging_setup.py  models.py  parsers.py  prompts.py  reporter.py  triage.py
src/test_tool/: __init__.py  audit.py  config.py  executor.py  llm.py  logging_setup.py  models.py  parsers.py  prompts.py  reporter.py  triage.py
tests/: conftest.py  test_chat_service.py  test_cli.py  test_executor.py  test_ingestor.py  test_ingestor_log.py  test_models.py  test_notifications.py  test_remediation.py  test_triage_engine.py
ui/: app.py  theme.py
ui/components/: chat_sidebar.py  severity_banner.py  sidebar.py
ui/pages/: p01_dashboard.py  p02_triage.py  p03_fix_script.py  p03_remediation.py  p04_comparison.py  p04_execute.py  p05_replay.py  p05_results.py  p06_knowledge.py  p07_history.py  p08_run_detail.py
