[project]
name = "nbn-test-triage-tool"
version = "0.1.0-milestone1"
description = "AI-powered test failure triage and remediation for NBN access networks"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.97.0",
    "pydantic>=2.13.0",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.0",
    "streamlit>=1.56.0",
    "plotly>=6.7.0",
    "click>=8.3.0",
    "rich>=15.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.4.0",
]

[project.scripts]
nbn-triage = "cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
